--- a/configs/config.yml
+++ b/configs/config.yml
@@ -1,1 +1,7 @@
-port: "3000"
+port: "8000"
+db:
+  username: "postgres"
+  host: "localhost"
+  port: "5436"
+  dbname: "test"
+  sslmode: "disable"
